Fix dark mode styling on reading page

--- a/content/stylesheets-modular/tailwind.css
+++ b/content/stylesheets-modular/tailwind.css
@@ -2462,11 +2462,6 @@ video {
   color: rgb(100 116 139 / var(--tw-text-opacity));
 }
 
-.text-slate-800 {
-  --tw-text-opacity: 1;
-  color: rgb(30 41 59 / var(--tw-text-opacity));
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
